--- a/css/index_style.css
+++ b/css/index_style.css
@@ -2,8 +2,8 @@ body{
 	background-image: url("../img/fantasy.jpg");
 	background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center; 
-    background-size: 1500px 800px;
+    background-size: cover;
+
 }
 .IMG{
 	display: inline-block;
