--- a/css/nav_style.css
+++ b/css/nav_style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url("../img/knigh.jpg");
+    background-image: url("../img/khe.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center; 
@@ -75,6 +75,7 @@ header {
             
                 header > div#logo > div#navToggle:hover > a {
                     color: rgba(255,255,255,1);
+                    font-size: 19px;
                 }
 
     header > nav {
@@ -99,7 +100,7 @@ header {
             
                 header nav > ul > li > a {
                     display: block;
-                    color: rgba(0,0,0,.65);
+                    color: rgba(241,255,255,1);
                     font-weight: 700;
                     padding: 1.5rem 0;
                     text-decoration: none;
@@ -153,7 +154,7 @@ header {
     }
     
     header {
-        background-color: white;
+        background-image: url("../img/lol.jpg");
         flex-direction: row;
         line-height: 79px;
         padding: 0 3rem;
